# vertical_cable_routing

./: .gitignore  README.md
cable_bringup/: CMakeLists.txt  package.xml
cable_core/: CMakeLists.txt  package.xml  setup.py
cable_core/config/board/: board_config.json
cable_core/config/clip_types/: u_clip.yaml
cable_core/src/cable_core/: __init__.py  board_models.py  board_projection.py  board_service.py  board_yz_calibration.py  camera_projection.py  clip_types.py  dual_arm_presentation_geometry.py  planes.py
cable_core/src/cable_core/motion_primitives/: __init__.py  c_clip.py  u_clip.py
cable_motion/: CMakeLists.txt  package.xml  setup.py
cable_motion/src/cable_motion/: __init__.py  arm_motion_utils.py
cable_msgs/: CMakeLists.txt  package.xml
cable_orchestrator/: CMakeLists.txt  package.xml  setup.py
cable_orchestrator/src/cable_orchestrator/: __init__.py  action_step.py  action_types.py  base_action.py  base_step.py  default_pipeline.py  pipeline_orchestrator.py  pipeline_state.py  step_action.py  step_runner.py
cable_orchestrator/src/cable_orchestrator/steps/: __init__.py  check_if_grasped_step.py  check_if_lax_step.py  close_first_gripper_step.py  close_second_gripper_step.py  compute_orientation_step.py  descend_to_grasp_step.py  execute_first_route_step.py  execute_next_peg_route_step.py  grasp_planning_step.py  grasp_pose_step.py  handover_fine_orient_step.py  handover_move_exchange_step.py  home_arms_step.py  init_environment_step.py  plan_first_route_step.py  plan_next_peg_route_step.py  pregrasp_pose_step.py  prepare_routing_step.py  present_cable_vertical_step.py  robot_motion_step.py  second_arm_side_approach_step.py  trace_cable_step.py  trace_to_world_step.py  unwind_wrists_step.py  visualize_grasps_step.py
cable_perception/: CMakeLists.txt  package.xml  setup.py
cable_perception/src/cable_perception/: __init__.py  cable_orientation_service.py  camera_adapter.py  image_utils.py  path_projection_service.py  ros_image_utils.py  tracer_adapter.py  tracing_service.py  zed_camera.py
cable_perception/src/handloom_runtime/: __init__.py
cable_perception/src/handloom_runtime/analytic_tracer/: __init__.py  simple_uncertain_trace_single.py
cable_perception/src/handloom_runtime/analytic_tracer/utils/: __init__.py  utils.py
cable_perception/src/handloom_runtime/handloom_pipeline/: __init__.py  single_tracer.py  tracer.py
cable_perception/src/handloom_runtime/model_training/: __init__.py
cable_perception/src/handloom_runtime/model_training/src/: __init__.py  model.py  resnet_dilated.py
cable_planning/: CMakeLists.txt  package.xml  setup.py
cable_planning/src/cable_planning/: __init__.py  first_route_clip_target_service.py  first_route_targets.py  grasp_pose_service.py  handover_pose_service.py  peg_route_planner.py  pose_validation.py  pregrasp_pose_service.py  sequence.py
cable_routing_utilities/: CMakeLists.txt  package.xml
cable_routing_utilities/scripts/: camera_robot_2d_calibrator.py
cable_studio/: CMakeLists.txt  package.xml  setup.py
cable_studio/config/cameras/: camera_robot_2d_calibration.yaml  zed_to_world_left.tf  zed_to_world_right.tf
cable_studio/config/parts/: core.yaml  first_route.yaml  routing_plane.yaml  trace.yaml
cable_studio/scripts/: cable_trace.csv  run_studio.py
cable_studio/src/cable_studio/: __init__.py  cable_trace_io.py  checkpoint_io.py  debug_config.py  debug_context.py  gui_controller.py  main_window.py  visualization_service.py
docs/: architecture.md  migration_plan.md
