<?xml version="1.0"?>
<package format="2">
  <name>cable_motion</name>
  <version>0.0.0</version>
  <description>Motion execution and robot-control integration for cable routing.</description>

  <maintainer email="osherexp@todo.todo">osherexp</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cable_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-scipy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>cable_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
