<?xml version="1.0"?>
<package format="2">
  <name>cable_perception</name>
  <version>0.0.0</version>
  <description>Perception nodes and services for camera input, tracing, and projection.</description>

  <maintainer email="osherexp@todo.todo">osherexp</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cable_core</build_depend>
  <build_depend>cable_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-opencv</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>cable_core</exec_depend>
  <exec_depend>cable_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>
