<?xml version="1.0"?>
<package format="2">
  <name>cable_planning</name>
  <version>0.0.0</version>
  <description>Planning services and routing target generation for cable manipulation.</description>

  <maintainer email="osherexp@todo.todo">osherexp</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cable_core</build_depend>
  <build_depend>cable_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>cable_core</exec_depend>
  <exec_depend>cable_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
