<?xml version="1.0"?>
<package format="2">
  <name>cable_studio</name>
  <version>0.0.0</version>
  <description>Qt-based operator and development studio for cable routing.</description>

  <maintainer email="osherexp@todo.todo">osherexp</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cable_msgs</build_depend>
  <build_depend>cable_orchestrator</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>cable_msgs</exec_depend>
  <exec_depend>cable_orchestrator</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
